--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.18"
   }
 }
